adiciona titulo primeira seção

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>DCC202 - Atividade 3: Gustavo do Bem Ferreira</title>
 </head>
 <body>
-    
+    <main>
+    <h1>DCC202 - Atividade 3: Gustavo do Bem Ferreira</h1>
+    <p>teste</p>
+    <section>
+        <h2>Naturalidade</h2>
+        <p></p>
+    </section>
+    </main>
 </body>
 </html>
