--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h2>Naturalidade</h2>
         <p></p>
     </section>
+    <section>
+        
+    </section>
     </main>
 </body>
 </html>
