adiciona paragrafo primeira seção

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <p>teste</p>
     <section>
         <h2>Naturalidade</h2>
-        <p></p>
+        <p>Teste</p>
     </section>
     <section>
-        
+
     </section>
     </main>
 </body>
