adiciona segundo titulo da seção

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Teste</p>
     </section>
     <section>
-
+        <h2>O que eu gosto de fazer?</h2>
     </section>
     </main>
 </body>
