--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </section>
     <section>
         <h2>O que eu gosto de fazer?</h2>
+        <p>Jogar</p>
     </section>
     </main>
 </body>
